tests/baselines/reference/classAbstractSingleLineDecl.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(3,1): error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(6,1): error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(10,1): error TS2511: Cannot create an instance of the abstract class 'A'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts (3 errors) ====
    abstract class A {}
    
    abstract
    ~~~~~~~~
!!! error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
    class B {}
    
    abstract
    ~~~~~~~~
!!! error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
    
    class C {}
    
    new A;
    ~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'A'.
    new B;
    new C;